--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   idempiere:
-    image: idempiereofficial/idempiere:7.1
+    image: portus.ingeint.com/idempiere:7.1
     ports:
       - 8181:8080
     environment:
