--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,10 +2,10 @@ version: '3.7'
 
 services:
   idempiere:
-    image: idempiereofficial/idempiere:daily
+    image: idempiereofficial/idempiere:8.2
     ports:
-      - 8091:8080
-      - 8612:12612
+      - 8092:8080
+      - 8613:12612
     environment:
       - TZ=America/Guayaquil
       - MIGRATE_EXISTING_DATABASE=true
