--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -13,7 +13,9 @@ pipeline {
         stage('Build Artefact') {
             agent {
                 docker {
-                    image 'idempiere:source-release-8.2'                    
+                    image 'portus.ingeint.com/idempiere-release:8.2'
+                    registryUrl 'https://portus.ingeint.com'
+                    registryCredentialsId 'portus-ingeint'                    
                 }
             }
             steps {
