--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage('Build Artefact') {
             agent {
                 docker {
-                    image 'portus.ingeint.com/idempiere-release:8.2'
+                    image 'idempiere-release:8.2'
                     registryUrl 'https://portus.ingeint.com'
                     registryCredentialsId 'portus-ingeint'                    
                 }
