--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         stage('Build Artefact') {
             agent {
                 docker {
-                    image 'portus.ingeint.com/idempiere-source:8.2'
+                    image 'portus.ingeint.com/source-release:8.2'
                     registryUrl 'https://portus.ingeint.com'
                     registryCredentialsId 'portus-ingeint'                 
                 }
