--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
             steps {
 
                 sh 'docker pull idempiereofficial/idempiere:source-release-8.2'
-                sh 'docker run -d --name source source-release-8.2 sleep 200'
+                sh 'docker run -d --name source idempiere:source-release-8.2 sleep 200'
                 sh 'docker cp source:/source/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./idempiere'
 
                 sh 'ls /idempiere'
