--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -7,10 +7,14 @@ pipeline {
     stages {
         stage('Build Artefact') {
             agent {
-                docker { image 'docker:19' }
+                docker { 
+                     image 'portus.ingeint.com/idempiere-source:8.2'
+                     registryUrl 'https://portus.ingeint.com'
+                     registryCredentialsId 'portus-ingeint'
+                }
             }
             steps {
-                sh 'docker run -d --name source-release idempiere:source-release-8.2 sleep 60'
+                sh 'docker run -d --name source idempiere-source:8.2 sleep 60'
                 sh 'docker cp source:/source/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./idempiere'
             }
         }
