--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent none
     environment {
         IDEMPIERE_REPOSITORY = "/idempiere"
+        REGISTRY_PASS = credentials('ingeint-registry-pass')
 
     }
     stages {
@@ -14,6 +15,7 @@ pipeline {
                 }
             }
             steps {
+                sh 'docker login $registryUrl -u $REGISTRY_USER -p $REGISTRY_PASS'
                 sh 'docker run -d --name source idempiere-source:8.2 sleep 60'
                 sh 'docker cp source:/source/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./idempiere'
             }
