--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -17,8 +17,9 @@ pipeline {
                 sh 'docker run -d --name source portus.ingeint.com/idempiere-source sleep 60'
                 sh 'docker cp source:/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./source-idempiere '
                 sh 'zip -9 -r idempiereServer.gtk.linux.x86_64.zip source-idempiere'
+                sh 'ls'
 
-                archiveArtifacts artifacts: 'idempiereServer.gtk.linux.x86_64.zip', fingerprint: true
+                archiveArtifacts artifacts: '/idempiereServer.gtk.linux.x86_64.zip', fingerprint: true
                 
                 sh 'docker rm -f source '
             }
