--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         stage('Build Artefact') {
             agent {
                 docker { 
-                     image 'portus.ingeint.com/idempiere-source:8.2'
+                     image 'docker:19'
                 }
             }
             steps {
