--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -16,8 +16,10 @@ pipeline {
                 sh 'docker login $REGISTRY_REPOSITORY -u $REGISTRY_USER -p $REGISTRY_PASS'
                 sh 'docker run -d --name source portus.ingeint.com/idempiere-source sleep 60'
                 sh 'docker cp source:/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./source-idempiere '
-                sh 'zip -9 -r idempiereServer.gtk.linux.x86_64.zip source-idempiere'
                 sh 'ls'
+
+                archiveArtifacts artifacts: '/source-idempiere', fingerprint: true
+                
                 sh 'docker rm -f source '
             }
         }
