--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 sh 'docker cp source:/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./source-idempiere '
                 sh 'ls'
 
-                archiveArtifacts artifacts: '/source-idempiere', fingerprint: true
+                archiveArtifacts artifacts: 'source-idempiere', fingerprint: true
                 
                 sh 'docker rm -f source '
             }
