--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -9,16 +9,16 @@ pipeline {
         stage('Build Artefact') {
             agent {
                 docker { 
-                     image 'docker:19'
+                     image 'ubuntu:xenial'
                 }
             }
             steps {
                 sh 'docker login $REGISTRY_REPOSITORY -u $REGISTRY_USER -p $REGISTRY_PASS'
                 sh 'docker run -d --name source portus.ingeint.com/idempiere-source sleep 60'
+                sh 'rm -R source-idempiere'
                 sh 'docker cp source:/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./source-idempiere '
-                sh 'ls'
-
-                archiveArtifacts artifacts: 'source-idempiere', fingerprint: true
+                sh 'zip -9 -r idempiereServer.gtk.linux.x86_64.zip source-idempiere'
+                archiveArtifacts artifacts: 'idempiereServer.gtk.linux.x86_64.zip', fingerprint: true
                 
                 sh 'docker rm -f source '
             }
