--- a/jenkins-idempiere-plugins/Jenkinsfile
+++ b/jenkins-idempiere-plugins/Jenkinsfile
@@ -16,10 +16,11 @@ pipeline {
                 sh 'docker login $REGISTRY_REPOSITORY -u $REGISTRY_USER -p $REGISTRY_PASS'
                 sh 'docker run -d --name source portus.ingeint.com/idempiere-source sleep 60'
                 sh 'rm -R source-idempiere'
-                sh 'docker cp source:/idempiere/org.idempiere.p2/target/products/org.adempiere.server.product/linux/gtk/x86_64 ./source-idempiere '
+                sh 'docker cp source:/idempiere/ ./source-idempiere '
                 script{
                     zip archive: true, dir: 'source-idempiere', glob: '', zipFile: 'idempiereServer.gtk.linux.x86_64.zip'
                 }
+                sh 'ls'
                 sh 'docker rm -f source '
             }
         }
